Refactored to remove duplicate code

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/EmailHelper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.FileOps.jar=C:\\Users\\Jeff\\Documents\\NetBeansProjects\\FileOps\\dist\\FileOps.jar
+file.reference.FileOps.jar-1=C:\\Users\\jshepherd\\Documents\\NetBeansProjects\\HelperV1b\\dist\\lib\\FileOps.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.FileOps.jar}
+    ${file.reference.FileOps.jar}:\
+    ${file.reference.FileOps.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
