--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Jeff\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+file.reference.FileOps.jar=C:\\Users\\jshepherd\\Documents\\NetBeansProjects\\Email-Helper\\dist\\lib\\FileOps.jar
+user.properties.file=C:\\Users\\jshepherd\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
