Renamed functions and classes for clarity. Removed unnecessary comments.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,8 @@
 compile.on.save=true
-file.reference.FileOps.jar=C:\\Users\\jshepherd\\Documents\\NetBeansProjects\\Email-Helper\\dist\\lib\\FileOps.jar
-user.properties.file=C:\\Users\\jshepherd\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+do.depend=false
+do.jar=true
+file.reference.FileOps.jar=C:\\Users\\Jeff\\Documents\\NetBeansProjects\\Email-Helper\\dist\\lib\\FileOps.jar
+file.reference.FileOps.jar-1=C:\\Users\\Jeff\\Documents\\NetBeansProjects\\Email-Helper\\dist\\lib\\FileOps.jar
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Jeff\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
