Added feature to strip angled brackets from text.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.FileOps.jar=C:\\Users\\Jeff\\Documents\\NetBeansProjects\\Email-Helper\\dist\\lib\\FileOps.jar
+file.reference.FileOps.jar=S:\\Jeff Shepherd\\Documents\\NetBeansProjects\\Email-Helper\\dist\\lib\\FileOps.jar
 file.reference.FileOps.jar-1=C:\\Users\\Jeff\\Documents\\NetBeansProjects\\Email-Helper\\dist\\lib\\FileOps.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Jeff\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\jshepherd\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
